Fix issue on mobile where subwindows were not fullscreen

--- a/css/magnific-popup.css
+++ b/css/magnific-popup.css
@@ -218,6 +218,7 @@ button::-moz-focus-inner {
   .mfp-iframe-holder .mfp-content {
     line-height: 0;
     width: 100%;
+    height: 100%; /* extra */
     max-width: 900px; }
   .mfp-iframe-holder .mfp-close {
     top: -40px; }
